@@ -18,6 +18,7 @@ XXXX/XX/XX
   - #4537, Fix leak in WKT collection parser (Raúl Marín)
   - #4546, Fix ST_ConcaveHull under FDW (Raúl Marín)
   - #4547, Fix AddRasterConstraints handling of empty tables (Sandro Santilli)
+  - #4549, Fix schema qualification of internal types (Raúl Marín)
 
 
 PostGIS 2.4.8
